@@ -25,6 +25,7 @@ import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.errors.PolicyViolationException;
 import org.apache.kafka.common.errors.UnknownTopicOrPartitionException;
 import org.apache.kafka.common.metadata.ConfigRecord;
+import org.apache.kafka.common.metadata.FeatureLevelRecord;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.requests.ApiError;
 import org.apache.kafka.metadata.KafkaConfigSchema;
@@ -43,8 +44,6 @@ import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -55,7 +54,6 @@ import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Consumer;
 
-import static java.util.Arrays.asList;
 import static org.apache.kafka.clients.admin.AlterConfigOp.OpType.APPEND;
 import static org.apache.kafka.clients.admin.AlterConfigOp.OpType.DELETE;
 import static org.apache.kafka.clients.admin.AlterConfigOp.OpType.SET;
@@ -94,12 +92,10 @@ public class ConfigurationControlManagerTest {
     public static final Map<String, List<ConfigSynonym>> SYNONYMS = new HashMap<>();
 
     static {
-        SYNONYMS.put("abc", Collections.singletonList(new ConfigSynonym("foo.bar")));
-        SYNONYMS.put("def", Collections.singletonList(new ConfigSynonym("baz")));
-        SYNONYMS.put(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG,
-            Collections.singletonList(new ConfigSynonym(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG)));
-        SYNONYMS.put("quuux", Collections.singletonList(new ConfigSynonym("quux", HOURS_TO_MILLISECONDS)));
-        SYNONYMS.put(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, Collections.singletonList(new ConfigSynonym(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG)));
+        SYNONYMS.put("abc", List.of(new ConfigSynonym("foo.bar")));
+        SYNONYMS.put("def", List.of(new ConfigSynonym("baz")));
+        SYNONYMS.put("quuux", List.of(new ConfigSynonym("quux", HOURS_TO_MILLISECONDS)));
+        SYNONYMS.put(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, List.of(new ConfigSynonym(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG)));
     }
 
     static final KafkaConfigSchema SCHEMA = new KafkaConfigSchema(CONFIGS, SYNONYMS);
@@ -132,20 +128,20 @@ public class ConfigurationControlManagerTest {
     }
 
     @Test
-    public void testReplay() throws Exception {
+    public void testReplay() {
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
             setKafkaConfigSchema(SCHEMA).
             build();
-        assertEquals(Collections.emptyMap(), manager.getConfigs(BROKER0));
+        assertEquals(Map.of(), manager.getConfigs(BROKER0));
         manager.replay(new ConfigRecord().
             setResourceType(BROKER.id()).setResourceName("0").
             setName("foo.bar").setValue("1,2"));
-        assertEquals(Collections.singletonMap("foo.bar", "1,2"),
+        assertEquals(Map.of("foo.bar", "1,2"),
             manager.getConfigs(BROKER0));
         manager.replay(new ConfigRecord().
             setResourceType(BROKER.id()).setResourceName("0").
             setName("foo.bar").setValue(null));
-        assertEquals(Collections.emptyMap(), manager.getConfigs(BROKER0));
+        assertEquals(Map.of(), manager.getConfigs(BROKER0));
         manager.replay(new ConfigRecord().
             setResourceType(TOPIC.id()).setResourceName("mytopic").
             setName("abc").setValue("x,y,z"));
@@ -160,6 +156,7 @@ public class ConfigurationControlManagerTest {
     @Test
     public void testIncrementalAlterConfigs() {
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
+            setFeatureControl(createFeatureControlManager()).
             setKafkaConfigSchema(SCHEMA).
             build();
 
@@ -170,7 +167,7 @@ public class ConfigurationControlManagerTest {
                 entry(MYTOPIC, toMap(entry("abc", entry(APPEND, "123"))))),
                 true);
 
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
                 new ConfigRecord().setResourceType(TOPIC.id()).setResourceName("mytopic").
                     setName("abc").setValue("123"), CONFIG_RECORD.highestSupportedVersion())),
                 toMap(entry(BROKER0, new ApiError(Errors.INVALID_CONFIG,
@@ -179,7 +176,7 @@ public class ConfigurationControlManagerTest {
 
         RecordTestUtils.replayAll(manager, result.records());
 
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
                 new ConfigRecord().setResourceType(TOPIC.id()).setResourceName("mytopic").
                     setName("abc").setValue(null), CONFIG_RECORD.highestSupportedVersion())),
                 toMap(entry(MYTOPIC, ApiError.NONE))),
@@ -191,6 +188,7 @@ public class ConfigurationControlManagerTest {
     @Test
     public void testIncrementalAlterConfig() {
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
+            setFeatureControl(createFeatureControlManager()).
             setKafkaConfigSchema(SCHEMA).
             build();
         Map<String, Entry<AlterConfigOp.OpType, String>> keyToOps = toMap(entry("abc", entry(APPEND, "123")));
@@ -198,14 +196,14 @@ public class ConfigurationControlManagerTest {
         ControllerResult<ApiError> result = manager.
             incrementalAlterConfig(MYTOPIC, keyToOps, true);
 
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
                 new ConfigRecord().setResourceType(TOPIC.id()).setResourceName("mytopic").
                     setName("abc").setValue("123"), CONFIG_RECORD.highestSupportedVersion())),
             ApiError.NONE), result);
 
         RecordTestUtils.replayAll(manager, result.records());
 
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
                     new ConfigRecord().setResourceType(TOPIC.id()).setResourceName("mytopic").
                         setName("abc").setValue(null), CONFIG_RECORD.highestSupportedVersion())),
                 ApiError.NONE),
@@ -224,13 +222,14 @@ public class ConfigurationControlManagerTest {
     @Test
     public void testIncrementalAlterMultipleConfigValues() {
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
+            setFeatureControl(createFeatureControlManager()).
             setKafkaConfigSchema(SCHEMA).
             build();
 
         ControllerResult<Map<ConfigResource, ApiError>> result = manager.
             incrementalAlterConfigs(toMap(entry(MYTOPIC, toMap(entry("abc", entry(APPEND, "123,456,789"))))), true);
 
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
                 new ConfigRecord().setResourceType(TOPIC.id()).setResourceName("mytopic").
                     setName("abc").setValue("123,456,789"), CONFIG_RECORD.highestSupportedVersion())),
                 toMap(entry(MYTOPIC, ApiError.NONE))), result);
@@ -241,14 +240,14 @@ public class ConfigurationControlManagerTest {
         result = manager
             .incrementalAlterConfigs(toMap(entry(MYTOPIC, toMap(entry("abc", entry(APPEND, "123,456"))))), true);
         assertEquals(
-            ControllerResult.atomicOf(Collections.emptyList(), toMap(entry(MYTOPIC, ApiError.NONE))),
+            ControllerResult.atomicOf(List.of(), toMap(entry(MYTOPIC, ApiError.NONE))),
             result
         );
         RecordTestUtils.replayAll(manager, result.records());
 
         result = manager
             .incrementalAlterConfigs(toMap(entry(MYTOPIC, toMap(entry("abc", entry(SUBTRACT, "123,456"))))), true);
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
                 new ConfigRecord().setResourceType(TOPIC.id()).setResourceName("mytopic").
                     setName("abc").setValue("789"), CONFIG_RECORD.highestSupportedVersion())),
                 toMap(entry(MYTOPIC, ApiError.NONE))),
@@ -259,7 +258,7 @@ public class ConfigurationControlManagerTest {
         result = manager
             .incrementalAlterConfigs(toMap(entry(MYTOPIC, toMap(entry("abc", entry(SUBTRACT, "123456"))))), true);
         assertEquals(
-            ControllerResult.atomicOf(Collections.emptyList(), toMap(entry(MYTOPIC, ApiError.NONE))),
+            ControllerResult.atomicOf(List.of(), toMap(entry(MYTOPIC, ApiError.NONE))),
             result
         );
         RecordTestUtils.replayAll(manager, result.records());
@@ -270,6 +269,7 @@ public class ConfigurationControlManagerTest {
     @Test
     public void testIncrementalAlterConfigsWithoutExistence() {
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
+            setFeatureControl(createFeatureControlManager()).
             setKafkaConfigSchema(SCHEMA).
             setExistenceChecker(TestExistenceChecker.INSTANCE).
             build();
@@ -281,7 +281,7 @@ public class ConfigurationControlManagerTest {
                 entry(existingTopic, toMap(entry("def", entry(SET, "newVal"))))),
                 false);
 
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
                 new ConfigRecord().setResourceType(TOPIC.id()).setResourceName("ExistingTopic").
                     setName("def").setValue("newVal"), CONFIG_RECORD.highestSupportedVersion())),
             toMap(entry(BROKER0, new ApiError(Errors.UNKNOWN_TOPIC_OR_PARTITION,
@@ -312,7 +312,7 @@ public class ConfigurationControlManagerTest {
         }
 
         @Override
-        public void close() throws Exception {
+        public void close() {
             // nothing to do
         }
 
@@ -324,13 +324,14 @@ public class ConfigurationControlManagerTest {
 
     @Test
     public void testIncrementalAlterConfigsWithPolicy() {
-        MockAlterConfigsPolicy policy = new MockAlterConfigsPolicy(asList(
-            new RequestMetadata(MYTOPIC, Collections.emptyMap()),
+        MockAlterConfigsPolicy policy = new MockAlterConfigsPolicy(List.of(
+            new RequestMetadata(MYTOPIC, Map.of()),
             new RequestMetadata(BROKER0, toMap(
                 entry("foo.bar", "123"),
                 entry("quux", "456"),
                 entry("broker.config.to.remove", null)))));
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
+            setFeatureControl(createFeatureControlManager()).
             setKafkaConfigSchema(SCHEMA).
             setAlterConfigPolicy(Optional.of(policy)).
             build();
@@ -341,7 +342,7 @@ public class ConfigurationControlManagerTest {
                 setName("topic.config").setValue("123"));
         manager.replay(new ConfigRecord().setResourceType(BROKER.id()).setResourceName("0").
                 setName("broker.config.to.remove").setValue("123"));
-        assertEquals(ControllerResult.atomicOf(asList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
                 new ConfigRecord().setResourceType(BROKER.id()).setResourceName("0").
                     setName("foo.bar").setValue("123"), CONFIG_RECORD.highestSupportedVersion()), new ApiMessageAndVersion(
                                 new ConfigRecord().setResourceType(BROKER.id()).setResourceName("0").
@@ -376,7 +377,7 @@ public class ConfigurationControlManagerTest {
         }
 
         @Override
-        public void close() throws Exception {
+        public void close() {
             // empty
         }
 
@@ -389,10 +390,11 @@ public class ConfigurationControlManagerTest {
     @Test
     public void testLegacyAlterConfigs() {
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
+            setFeatureControl(createFeatureControlManager()).
             setKafkaConfigSchema(SCHEMA).
             setAlterConfigPolicy(Optional.of(new CheckForNullValuesPolicy())).
             build();
-        List<ApiMessageAndVersion> expectedRecords1 = asList(
+        List<ApiMessageAndVersion> expectedRecords1 = List.of(
             new ApiMessageAndVersion(new ConfigRecord().
                 setResourceType(TOPIC.id()).setResourceName("mytopic").
                 setName("abc").setValue("456"), CONFIG_RECORD.highestSupportedVersion()),
@@ -407,7 +409,7 @@ public class ConfigurationControlManagerTest {
         for (ApiMessageAndVersion message : expectedRecords1) {
             manager.replay((ConfigRecord) message.message());
         }
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(
+        assertEquals(ControllerResult.atomicOf(List.of(
             new ApiMessageAndVersion(
                 new ConfigRecord()
                     .setResourceType(TOPIC.id())
@@ -424,6 +426,7 @@ public class ConfigurationControlManagerTest {
     @ValueSource(booleans = {false, true})
     public void testMaybeGenerateElrSafetyRecords(boolean setStaticConfig) {
         ConfigurationControlManager.Builder builder = new ConfigurationControlManager.Builder().
+            setFeatureControl(createFeatureControlManager()).
             setKafkaConfigSchema(SCHEMA);
         if (setStaticConfig) {
             builder.setStaticConfig(Map.of(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "2"));
@@ -433,9 +436,9 @@ public class ConfigurationControlManagerTest {
             toMap(entry(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, entry(SET, "3")));
         ConfigResource brokerConfigResource = new ConfigResource(ConfigResource.Type.BROKER, "1");
         ControllerResult<ApiError> result = manager.incrementalAlterConfig(brokerConfigResource, keyToOps, true);
-        assertEquals(Collections.emptySet(), manager.brokersWithConfigs());
+        assertEquals(Set.of(), manager.brokersWithConfigs());
 
-        assertEquals(ControllerResult.atomicOf(Collections.singletonList(new ApiMessageAndVersion(
+        assertEquals(ControllerResult.atomicOf(List.of(new ApiMessageAndVersion(
             new ConfigRecord().setResourceType(BROKER.id()).setResourceName("1").
                 setName(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG).setValue("3"), (short) 0)),
             ApiError.NONE), result);
@@ -449,7 +452,7 @@ public class ConfigurationControlManagerTest {
             effectiveMinInsync + ". Removing broker-level min.insync.replicas " +
             "for brokers: 1.", manager.maybeGenerateElrSafetyRecords(records));
 
-        assertEquals(Arrays.asList(new ApiMessageAndVersion(
+        assertEquals(List.of(new ApiMessageAndVersion(
             new ConfigRecord().
                 setResourceType(BROKER.id()).
                 setResourceName("").
@@ -462,7 +465,7 @@ public class ConfigurationControlManagerTest {
                 setValue(null), (short) 0)),
             records);
         RecordTestUtils.replayAll(manager, records);
-        assertEquals(Collections.emptySet(), manager.brokersWithConfigs());
+        assertEquals(Set.of(), manager.brokersWithConfigs());
     }
 
     @ParameterizedTest
@@ -471,19 +474,23 @@ public class ConfigurationControlManagerTest {
         FeatureControlManager featureManager = new FeatureControlManager.Builder().
             setQuorumFeatures(new QuorumFeatures(0,
                 QuorumFeatures.defaultSupportedFeatureMap(true),
-                Collections.emptyList())).
+                List.of())).
             build();
+        featureManager.replay(new FeatureLevelRecord().
+            setName(MetadataVersion.FEATURE_NAME).
+            setFeatureLevel(MetadataVersion.LATEST_PRODUCTION.featureLevel()));
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
             setStaticConfig(Map.of(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "2")).
             setFeatureControl(featureManager).
             setKafkaConfigSchema(SCHEMA).
             build();
         ControllerResult<ApiError> result = manager.updateFeatures(
-            Collections.singletonMap(EligibleLeaderReplicasVersion.FEATURE_NAME,
+            Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME,
                 EligibleLeaderReplicasVersion.ELRV_1.featureLevel()),
-            Collections.singletonMap(EligibleLeaderReplicasVersion.FEATURE_NAME,
+            Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME,
                 FeatureUpdate.UpgradeType.UPGRADE),
-            false);
+            false,
+            0);
         assertNotNull(result.response());
         assertEquals(Errors.NONE, result.response().error());
         RecordTestUtils.replayAll(manager, result.records());
@@ -518,9 +525,11 @@ public class ConfigurationControlManagerTest {
         FeatureControlManager featureManager = new FeatureControlManager.Builder().
             setQuorumFeatures(new QuorumFeatures(0,
                 QuorumFeatures.defaultSupportedFeatureMap(true),
-                Collections.emptyList())).
-            setMetadataVersion(isMetadataVersionElrEnabled ? MetadataVersion.IBP_4_0_IV1 : MetadataVersion.IBP_4_0_IV0).
+                List.of())).
             build();
+        featureManager.replay(new FeatureLevelRecord().
+            setName(MetadataVersion.FEATURE_NAME).
+            setFeatureLevel(isMetadataVersionElrEnabled ? MetadataVersion.IBP_4_0_IV1.featureLevel() : MetadataVersion.IBP_4_0_IV0.featureLevel()));
         ConfigurationControlManager manager = new ConfigurationControlManager.Builder().
             setStaticConfig(Map.of(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "2")).
             setFeatureControl(featureManager).
@@ -528,11 +537,12 @@ public class ConfigurationControlManagerTest {
             build();
         assertFalse(featureManager.isElrFeatureEnabled());
         ControllerResult<ApiError> result = manager.updateFeatures(
-            Collections.singletonMap(EligibleLeaderReplicasVersion.FEATURE_NAME,
+            Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME,
                 EligibleLeaderReplicasVersion.ELRV_1.featureLevel()),
-            Collections.singletonMap(EligibleLeaderReplicasVersion.FEATURE_NAME,
+            Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME,
                 FeatureUpdate.UpgradeType.UPGRADE),
-            false);
+            false,
+            0);
         assertNotNull(result.response());
         if (isMetadataVersionElrEnabled) {
             assertEquals(Errors.NONE, result.response().error());
@@ -542,5 +552,13 @@ public class ConfigurationControlManagerTest {
         } else {
             assertEquals(Errors.INVALID_UPDATE_VERSION, result.response().error());
         }
+    }
+
+    private FeatureControlManager createFeatureControlManager() {
+        FeatureControlManager featureControlManager = new FeatureControlManager.Builder().build();
+        featureControlManager.replay(new FeatureLevelRecord().
+            setName(MetadataVersion.FEATURE_NAME).
+            setFeatureLevel(MetadataVersion.LATEST_PRODUCTION.featureLevel()));
+        return featureControlManager;
     }
 }
