@@ -32,6 +32,7 @@ import org.apache.kafka.common.record.Records;
 import org.apache.kafka.common.record.SimpleRecord;
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.Utils;
+import org.apache.kafka.server.common.OffsetAndEpoch;
 import org.apache.kafka.snapshot.RawSnapshotReader;
 import org.apache.kafka.snapshot.RawSnapshotWriter;
 
@@ -48,12 +49,11 @@ import org.junit.jupiter.params.provider.ArgumentsSource;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.IntStream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -92,10 +92,10 @@ public class MockLogTest {
         int epoch = 2;
         SimpleRecord recordOne = new SimpleRecord("one".getBytes());
         SimpleRecord recordTwo = new SimpleRecord("two".getBytes());
-        appendAsLeader(Arrays.asList(recordOne, recordTwo), epoch);
+        appendAsLeader(List.of(recordOne, recordTwo), epoch);
 
         SimpleRecord recordThree = new SimpleRecord("three".getBytes());
-        appendAsLeader(Collections.singleton(recordThree), epoch);
+        appendAsLeader(Set.of(recordThree), epoch);
 
         assertEquals(0L, log.startOffset());
         assertEquals(3L, log.endOffset().offset());
@@ -148,7 +148,7 @@ public class MockLogTest {
         List<SimpleRecord> expectedRecords = new ArrayList<>();
 
         expectedRecords.add(recordOne);
-        appendAsLeader(Collections.singleton(recordOne), epoch);
+        appendAsLeader(Set.of(recordOne), epoch);
 
         assertEquals(new OffsetAndEpoch(expectedRecords.size(), epoch), log.endOffsetForEpoch(epoch));
         assertEquals(epoch, log.lastFetchedEpoch());
@@ -158,7 +158,7 @@ public class MockLogTest {
         SimpleRecord recordThree = new SimpleRecord("three".getBytes());
         expectedRecords.add(recordTwo);
         expectedRecords.add(recordThree);
-        appendAsLeader(Arrays.asList(recordTwo, recordThree), epoch);
+        appendAsLeader(List.of(recordTwo, recordThree), epoch);
 
         assertEquals(new OffsetAndEpoch(expectedRecords.size(), epoch), log.endOffsetForEpoch(epoch));
         assertEquals(epoch, log.lastFetchedEpoch());
@@ -274,7 +274,7 @@ public class MockLogTest {
         recordTwoBuffer.putInt(2);
         SimpleRecord recordTwo = new SimpleRecord(recordTwoBuffer);
 
-        appendAsLeader(Arrays.asList(recordOne, recordTwo), epoch);
+        appendAsLeader(List.of(recordOne, recordTwo), epoch);
 
         Records records = log.read(0, Isolation.UNCOMMITTED).records;
 
@@ -282,7 +282,7 @@ public class MockLogTest {
         for (Record record : records.records()) {
             extractRecords.add(record.value());
         }
-        assertEquals(Arrays.asList(recordOne.value(), recordTwo.value()), extractRecords);
+        assertEquals(List.of(recordOne.value(), recordTwo.value()), extractRecords);
     }
 
     @Test
